2003-04-28  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_RETURN): eliminate umpteen billion calls to
	__errno_location, incorporate BK_ORETURN functionality
	(BK_ORETURN): trivially defined as BK_RETURN for compatibility

	* include/libbk_oscompat.h (NULL): ensure pointer-ness of NULL

	* lib/b_fun.c (bk_fun_exit): make the billion calls to _errno_location
	here, in a function only called if seatbelts are turned on
	
	* lib/b_strconv.c (bk_string_atou64_int): ignore trailing whitespace
	[applies to all of bk_string_ato{flag,[ui]{32,64}}]
	(bk_string_atod): return 1 for trailing junk, just like integers
	[also applies to bk_string_atof]
	
2003-04-17  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_registry_insert): Return the *correct*
	value from registry insert. 

2003-04-14  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_rand.c: Make usable [w.r.t. generating _true_ random numbers
	with actual measurement of individual machine's characteristics]

2003-04-16  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_oscompat.h: get ether stuff from netinet/ether.h

2003-04-12  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_general.c: Update threading state for recent changes

	* lib/b_stats.c: Specify thread state

	* lib/b_funlist.c: Specify thread state

	* lib/b_fileutils.c: Specify thread state

	* include/libbk.h (BK_ENV_GWD): Use lock protected getenv

	* lib/b_exec.c (bk_getenv): Create lock protected getenv

	* lib/b_exec.c: Specify thread state.

2003-04-10  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_crc.c: Specify thread state.

	* lib/b_config.c: Specify thread state.

	* lib/b_cksum.c: Specify thread state.

	* lib/b_child.c: Specify thread state.  Do cleanup to bring closer
	to working [really, not yet operational]

	* test/diskspeed.c: Seth's stupid disk throughput tester

	* lib/b_bits.c: Specify thread state
	* lib/b_addrgroup.c: Specify thread state